--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,18 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
+  build_and_push_to_docker_hub:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secret.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: artemgismatullin2004/tacki_backend:latest
